New Updates and fixes

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' http://api-gateway:8000;";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https: fonts.googleapis.com; font-src 'self' data: https: fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' localhost:* http://localhost:8000/api/users/login http://localhost:8000/api/users/* http://localhost:8000/api/* http://localhost:8000 http://api-gateway:8000 ws: wss: http: https:;";
 
     # Handle SPA routing
     location / {
